--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "framer-motion": "^12.19.2",
     "next": "15.2.4",
+    "p5": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -26,6 +28,7 @@
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@types/node": "^20",
+    "@types/p5": "^1.7.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.1.1",
