--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.19.2",
     "next": "15.2.4",
+    "next-i18next": "^15.4.2",
     "p5": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
